syntax = "proto3";
package proto;

service AttendanceGroup {
  rpc Create (AttendanceGroupRequesut) returns (AttendanceGroupResponse) {}
}

message AttendanceGroupRequesut {
  string group_name = 1;
  string login_id = 2;
  string password = 3;
  string user_name = 4;
}

message AttendanceGroupResponse {}
