syntax = "proto3";
package proto;

service User {
  rpc Register (UserRegisterRequesut) returns (UserRegisterResponse) {}
}

message UserRegisterRequesut {
  string attendance_group_id = 1;
  string login_id = 2;
  string password = 3;
  string name = 4;
}

message UserRegisterResponse {
  UserRegisterStatus status = 1;
  string message = 2;
}

enum UserRegisterStatus {
  UNKNOWN = 0;
  SUCCESS = 1;
  ERROR = 2;
}
